; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_enqueue_window_update.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_http2client.c_enqueue_window_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http2client_conn_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@INT32_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_http2client_conn_t*, i32, i32*, i64)* @enqueue_window_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enqueue_window_update(%struct.st_h2o_http2client_conn_t* %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct.st_h2o_http2client_conn_t*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.st_h2o_http2client_conn_t* %0, %struct.st_h2o_http2client_conn_t** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* @INT32_MAX, align 8
  %12 = icmp ule i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32*, i32** %7, align 8
  %16 = call i64 @h2o_http2_window_get_avail(i32* %15)
  %17 = mul i64 %16, 2
  %18 = load i64, i64* %8, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %37

20:                                               ; preds = %4
  %21 = load i64, i64* %8, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i64 @h2o_http2_window_get_avail(i32* %22)
  %24 = sub i64 %21, %23
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %9, align 4
  %26 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %5, align 8
  %27 = getelementptr inbounds %struct.st_h2o_http2client_conn_t, %struct.st_h2o_http2client_conn_t* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @h2o_http2_encode_window_update_frame(i32* %28, i32 %29, i32 %30)
  %32 = load %struct.st_h2o_http2client_conn_t*, %struct.st_h2o_http2client_conn_t** %5, align 8
  %33 = call i32 @request_write(%struct.st_h2o_http2client_conn_t* %32)
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @h2o_http2_window_update(i32* %34, i32 %35)
  br label %37

37:                                               ; preds = %20, %4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @h2o_http2_window_get_avail(i32*) #1

declare dso_local i32 @h2o_http2_encode_window_update_frame(i32*, i32, i32) #1

declare dso_local i32 @request_write(%struct.st_h2o_http2client_conn_t*) #1

declare dso_local i32 @h2o_http2_window_update(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
